--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,18 @@ dependencies:
   intl: ^0.18.0
   geolocator: ^9.0.2
   geocoding: ^2.1.0
+  email_validator: ^2.1.17
+  validation_textformfield: ^2.2.5
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/logo5.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
