--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.3+3
 
 environment:
   sdk: '>=2.19.0 <3.0.0'
@@ -46,6 +46,7 @@ dependencies:
   email_validator: ^2.1.17
   validation_textformfield: ^2.2.5
   flutter_launcher_icons: ^0.13.1
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
