--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,13 @@ dependencies:
   validation_textformfield: ^2.2.5
   flutter_launcher_icons: ^0.13.1
   youtube_player_flutter: ^8.1.2
+  flutter_bloc: ^8.1.4
+  bloc: ^8.1.3
+  equatable: ^2.0.5
+  flutter_secure_storage: ^4.2.1
+  intl_utils: ^2.8.7
+  flutter_localization: ^0.2.0
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +76,7 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true # Add this line
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -78,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/ca/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
